# Xenari

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  xenari.db  xenari_cli.py  xenari_compat.py  xenari_core.py  xenari_db.py  xenari_export.py  xenari_gap.py  xenari_health.py  xenari_llm.py  xenari_lookup.py  xenari_mutation.py  xenari_tool.py  xenari_translate.py
.github/workflows/: ci.yml  release.yml
data/: translator-fixtures.json  xenari-dict.json
docs/: LLM_REFERENCE.md  translator-hardening-campaign.md
docs/development/: architecture.md  versioning.md
docs/history/: script-gap-root-batch-20260710.md  translator-hardening-campaign.md
docs/reference/: LLM_REFERENCE.md
examples/: phrases.md
scripts/: export_json.py
src/xenari/: __init__.py  _version.py  components.py  facade.py  grammar.py  paths.py  runtime.py  runtime_tables.py
src/xenari/cli/: __init__.py  commands.py  parser.py
src/xenari/cli/handlers/: __init__.py  curation.py  maintenance.py  query.py  translation.py
src/xenari/data/: translator-fixtures.json  xenari-runtime.json  xenari.db
src/xenari/db/: __init__.py  audit.py  categorization.py  mutation.py  pos.py  relations.py  search.py  store.py
src/xenari/services/: __init__.py  curation.py  export.py  gap.py  health.py  llm.py  lookup.py  mutation.py
src/xenari/translate/: __init__.py  dialogue.py  engine.py  frames.py  models.py  modifiers.py  numbers.py  preprocessing.py  report.py  reverse.py
tests/: __init__.py  conftest.py  support.py  test_cli.py  test_components.py  test_database.py  test_export.py  test_gaps.py  test_llm.py  test_packaged_resources.py  test_part_of_speech.py  test_properties.py  test_runtime_contract.py  test_runtime_safety.py  test_structure.py  test_translation.py  test_versioning.py  test_xenari_tool.py
