[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xenari"
version = "0.1.0"
description = "Canonical lexicon and translation tooling for the Xenari conlang"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Nyx"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
xenari = "xenari.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xenari = ["data/*.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
